# pixbar

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-05-18-almost-perfect-progressbar.md
docs/superpowers/specs/: 2026-05-18-almost-perfect-progressbar-design.md
examples/: animated.rs  basic.rs  degrade_ladder.rs  narrow.rs
fonts/: README.md
scripts/: build-font.sh  record-casts.sh  release.sh
src/: ansi.rs  detect.rs  glyphs.rs  html.rs  lib.rs  render.rs
tests/: font_patch.rs  snapshots.rs
tests/fixtures/: README.md
tests/snapshots/: snapshots__snap_100_01_99_ascii.snap  snapshots__snap_13_12_13_eighth_degrade.snap  snapshots__snap_13_33_67_eighth.snap  snapshots__snap_40_33_67_eighth.snap  snapshots__snap_40_50_50_sixteenth.snap  snapshots__snap_7_33_67_sixteenth.snap
tests/snapshots/visual/: 13-33-67-eighth.html  7-33-67-sixteenth.html
