[package]
name = "almost-perfect-progressbar"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "apb-bench"
path = "src/bin/apb_bench.rs"

[features]
html = []

[dependencies]
crossterm = "0.28"

[dev-dependencies]
insta    = { version = "1", features = ["yaml"] }
proptest = "1"
