[package]
name = "pixbar"
version = "0.1.0"
edition = "2024"
description = "Sub-cell-precision two-value progress bar for narrow terminal widths (Unicode 1/8 block, no font patching required)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/stormslowly/pixbar"
homepage = "https://github.com/stormslowly/pixbar"
documentation = "https://docs.rs/pixbar"
keywords = ["progress", "progressbar", "tui", "terminal", "cli"]
categories = ["command-line-interface", "visualization"]
authors = ["pshu <stormslowly@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "pixbar-bench"
path = "src/bin/pixbar_bench.rs"

[features]
html = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
publish = false
push = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"

[dependencies]
crossterm = "0.28"

[dev-dependencies]
insta    = { version = "1", features = ["yaml"] }
proptest = "1"
